--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+   <!--! Первое задание -->
+   <!--<input type="text" class="cls" value="" />
+   <input type="text" class="cls" value="" />
+   <input type="text" class="cls" value="" />
+   <input type="text" class="sum" value="" />
+   <button id="button">Click me</button> -->
+   <!--! Второе задание -->
+   <!-- <input type="text" class="cls" value="" />
+   <input type="text" class="cls" value="" />
+   <button id="button">Click me</button>
+   <p id="result"> </p> -->
    <script src="./index.js"></script>
 </body>
 
