--- a/SmallProjects/Calculators/index.html
+++ b/SmallProjects/Calculators/index.html
@@ -78,7 +78,7 @@
       <p class="result">Результат:</p>
    </div>
    <div class="dividers__two" >
-      <h2>Делители суммы чисел</h2>
+      <h2>Наибольший делитель двух чисел</h2>
       <input placeholder="Введите число" class="input" />
       <input placeholder="Введите число" class="input2" />
       <button class="button">Получить результат</button>
