--- a/SmallProjects/Text work/index.html
+++ b/SmallProjects/Text work/index.html
@@ -7,7 +7,14 @@
    <title>Document</title>
 </head>
 <body>
-   
+   <div class="firstTask">
+      <textarea class='textarea' aria-valuetext="" ></textarea>
+      <p class="result"></p>
+   </div>
+   <div class="secondTask">
+      <textarea class='textarea' aria-valuetext="" ></textarea>
+      <p class="result"></p>
+   </div>
    <script src="./scripts.js"></script>
 </body>
 </html>
